# ChatRoom

./: .gitignore  CMakeLists.txt  authdialog.cpp  authdialog.h  authservice.cpp  authservice.h  chatclient.cpp  chatclient.h  chatstore.cpp  chatstore.h  chatutils.cpp  chatutils.h  conversation.h  conversationitemdelegate.cpp  conversationitemdelegate.h  conversationlistmodel.cpp  conversationlistmodel.h  conversationmanager.cpp  conversationmanager.h  databasemanager.cpp  databasemanager.h  emojipicker.cpp  emojipicker.h  main.cpp  mainwindow.cpp  mainwindow.h  mediautils.cpp  mediautils.h  message.h  messagebubbledelegate.cpp  messagebubbledelegate.h  messagehandler.cpp  messagehandler.h  messagelistmodel.cpp  messagelistmodel.h  networkservice.cpp  networkservice.h  profilemanager.cpp  profilemanager.h  securestorage.cpp  (+8 more)
backend/: .env.example  README.md  package-lock.json  package.json  start-backend.bat
backend/sql/: schema.sql  seed-demo.sql
backend/src/: config.js  migrations.js  server.js  utils.js
backend/test/: run-tests.js
tests/: chatstoremodel_test.cpp  databasemanager_test.cpp  mediautils_test.cpp
tools/: diagnose-build.ps1  ws-echo-server.js
